kubernetes/authelia/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-secure
  namespace: authelia
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.wrenspace.dev`)
      kind: Rule
      services:
        - name: authelia
          port: 9091
          scheme: http
  tls:
    secretName: authelia-tls-secret
